compiler/testData/diagnostics/tests/sealed/NeverOpen.kt
// RUN_PIPELINE_TILL: FRONTEND
<!INCOMPATIBLE_MODIFIERS!>open<!> <!INCOMPATIBLE_MODIFIERS!>sealed<!> class Base {

}

/* GENERATED_FIR_TAGS: classDeclaration, sealed */
